# agent_copilot

./: .gitignore  README.md  pyproject.toml
app/: main.py
pipeline/: agent.py
serving_api/: main.py
